--- a/src/fxapp/style.css
+++ b/src/fxapp/style.css
@@ -30,3 +30,12 @@
     -fx-font-size: 1.5em;
     -fx-background-color: #11EE11;
 }
+.time-field {
+    -fx-control-inner-background: #ffd16e;
+}
+.integer-field {
+    -fx-control-inner-background: #add8e6;
+}
+.double-field {
+    -fx-control-inner-background: #a1ff91;
+}
